added Pethe2023 and Handzic2023

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -2378,6 +2378,19 @@
   url       = {http://public-library.uk/ebooks/24/100.pdf},
 }
 
+@Article{Arnold2019,
+  author    = {Arnold, T. and Tilton, L.},
+  title     = {Distant viewing: analyzing large visual corpora},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2019},
+  volume    = {34},
+  number    = {Supplement\_1},
+  pages     = {i3-i16},
+  doi       = {10.1093/llc/fqz013},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @InProceedings{Aronov2004,
   author    = {Aronov, B. and Asano, T. and Katoh, N. and Mehlhorn, K. and Tokuyama, T.},
   title     = {Polyline Fitting of Planar Points Under Min-sum Criteria},
@@ -2614,6 +2627,19 @@
   owner     = {Vincent},
   timestamp = {2019.04.07},
   url       = {https://www.gestiondesarts.com/en/the-dynamics-of-emotions-in-movie-consumption-a-spectator-centred-approach-pdf#.XLgzoOgzY-U},
+}
+
+@Article{Aurnhammer2019,
+  author    = {Aurnhammer, C. Cuppen, I. and van de Ven, I. and van Zaanen, M.},
+  title     = {Manual annotation of unsupervised models: Close and distant reading of politics on Reddit},
+  journal   = {Digital Humanities Quarterly},
+  year      = {2019},
+  volume    = {13},
+  number    = {3},
+  pages     = {1-18},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+  url       = {http://www.digitalhumanities.org/dhq/vol/13/3/000431/000431.html},
 }
 
 @Book{Ausburg2006,
@@ -4630,6 +4656,19 @@
   timestamp = {2019.12.31},
 }
 
+@Article{Benford1938,
+  author    = {Benford, F. Cite},
+  title     = {The Law of Anomalous Numbers},
+  journal   = {Proceedings of the American Philosophical Society},
+  year      = {1938},
+  volume    = {78},
+  number    = {4},
+  pages     = {551-572},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+  url       = {https://www.jstor.org/stable/984802},
+}
+
 @PhdThesis{Bengoetxea2003,
   author    = {Bengoetxea, E.},
   title     = {Inexact graph matching using estimation of distribution algorithms},
@@ -6122,6 +6161,17 @@
   doi       = {10.4230/OASIcs.CMN.2013.30},
   owner     = {Vincent},
   timestamp = {2015.11.19},
+}
+
+@Book{Bolisani2015,
+  title     = {Advances in Knowledge Management: Celebrating Twenty Years of Research and Practice},
+  publisher = {Springer},
+  year      = {2015},
+  author    = {Bolisani, Ettore and Handzic, Meliha},
+  series    = {Knowledge Management and Organizational Learning},
+  doi       = {10.1007/978-3-319-09501-1},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
 }
 
 @Book{Bollobas1979,
@@ -8782,6 +8832,16 @@
   timestamp = {2021.07.24},
 }
 
+@Book{Callon1986,
+  title     = {Mapping the Dynamics of Science and Technology: Sociology of Science in the Real World},
+  publisher = {Palgrave Macmillan},
+  year      = {1986},
+  author    = {Callon, M. and Law, J. and Rip, A.},
+  doi       = {10.1007/978-1-349-07408-2},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @Article{Camacho2002,
   author    = {Camacho, J. and Guimerà, R. and Amaral, L. A. N.},
   title     = {Robust Patterns in Food Web Structure},
@@ -10838,6 +10898,19 @@
   url       = {https://publikationen.sulb.uni-saarland.de/bitstream/20.500.11880/32914/1/thesis-twoside-toprint.pdf},
 }
 
+@Article{Chua2005,
+  author    = {Chua, A. and Lam, W.},
+  title     = {Why {KM} projects fail: a multi‐case analysis},
+  journal   = {Journal of Knowledge Management},
+  year      = {2005},
+  volume    = {9},
+  number    = {3},
+  pages     = {6–17},
+  doi       = {10.1108/13673270510602737},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @InProceedings{Chua2009,
   author    = {Chua, T.-S. and Tang, S. and Trichet, R. and Tan, H. K. and Song, Y.},
   title     = {MovieBase: a movie database for event detection and behavioral analysis},
@@ -11434,6 +11507,19 @@
   url       = {https://psycnet.apa.org/record/1961-35078-000},
 }
 
+@Article{Coleman1975,
+  author    = {Coleman, M. and Liau, T. L.},
+  title     = {A computer readability formula designed for machine scoring},
+  journal   = {Journal of Applied Psychology},
+  year      = {1975},
+  volume    = {60},
+  number    = {2},
+  pages     = {283},
+  doi       = {10.1037/h0076540},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @Article{Collantes2011,
   author    = {Ruiz Collantes, X. and Obradors, M. and Pujadas, E. and Ferrés, J. and Pérez, Ó.},
   title     = {Qualitative-quantitative analysis of narrative structures: The narrative roles of immigrants in Spanish television series},
@@ -11788,6 +11874,19 @@
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {http://cup.columbia.edu/book/a-new-history-of-early-english-drama/9780231102438},
+}
+
+@InCollection{Cook2014,
+  author    = {Cook, N.},
+  title     = {Close and Distant Listening},
+  booktitle = {Beyond the Score},
+  publisher = {Oxford University Press},
+  year      = {2014},
+  chapter   = {5},
+  pages     = {135-175},
+  doi       = {10.1093/acprof:oso/9780199357406.003.0005},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
 }
 
 @Article{Cooley1930,
@@ -12293,6 +12392,16 @@
   timestamp = {2019.04.09},
 }
 
+@Book{Cross2003,
+  title     = {Networks in the Knowledge Economy},
+  publisher = {Oxford University Press},
+  year      = {2003},
+  author    = {Cross, R. and Parker, A. and Sasson, L.},
+  doi       = {10.1093/oso/9780195159509.001.0001},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @Book{Croteau2014,
   title     = {Media/Society: Industries, images, and audiences},
   publisher = {Sage Publications},
@@ -12656,6 +12765,19 @@
   doi       = {10.1109/DAS.2018.73},
   owner     = {Vincent},
   timestamp = {2019.03.13},
+}
+
+@Article{Dale1948,
+  author    = {Dale, E. and Chall, J. S. Cite},
+  title     = {A Formula for Predicting Readability},
+  journal   = {Educational Research Bulletin},
+  year      = {1948},
+  volume    = {27},
+  number    = {1},
+  pages     = {11-20},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+  url       = {https://www.jstor.org/stable/1473169},
 }
 
 @Article{Dalen-Oskam2013,
@@ -13161,6 +13283,19 @@
   doi       = {10.1177/001872676702000207},
   owner     = {Vincent},
   timestamp = {2014.11.17},
+}
+
+@Article{Davis1989,
+  author    = {Davis, F. D.},
+  title     = {Perceived Usefulness, Perceived Ease of Use, and User Acceptance of Information Technology},
+  journal   = {MIS Quarterly},
+  year      = {1989},
+  volume    = {13},
+  number    = {3},
+  pages     = {319},
+  doi       = {10.2307/249008},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
 }
 
 @InProceedings{Davis2003,
@@ -17279,6 +17414,19 @@
   timestamp = {2019.04.11},
 }
 
+@Article{Fayyad1996,
+  author    = {Fayyad, U. and Piatetsky-Shapiro, G. and Smyth, P.},
+  title     = {From data mining to knowledge discovery in databases},
+  journal   = {AI Magazine},
+  year      = {1996},
+  volume    = {17},
+  number    = {3},
+  pages     = {37-54},
+  doi       = {10.1609/aimag.v17i3.1230},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @InProceedings{Federico2011,
   author    = {Federico, P. and Aigner, W. and Miksch, S. and Windhager, F. and Zenk, L.},
   title     = {A visual analytics approach to dynamic social networks},
@@ -19703,6 +19851,19 @@
   doi       = {10.18653/v1/p19-1339},
   owner     = {Vincent},
   timestamp = {2022.06.29},
+}
+
+@Article{Garlatti2015,
+  author    = {Garlatti, A. and Massaro, M.},
+  title     = {Is {KM} declining?},
+  journal   = {Electronic Journal of Knowledge Management},
+  year      = {2015},
+  volume    = {14},
+  number    = {1},
+  pages     = {1-4},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+  url       = {https://academic-publishing.org/index.php/ejkm/article/view/1065},
 }
 
 @InProceedings{Garten2015,
@@ -22945,6 +23106,74 @@
   url       = {http://www.jstatsoft.org/v24/i01},
 }
 
+@InProceedings{Handzic2016,
+  author    = {Handzic, M. and Dizdar, S.},
+  title     = {Knowledge management meets humanities: A case study of diplomatic correspondence visualisation},
+  booktitle = {11th forum on knowledge asset dynamics - Towards a new architecture of knowledge: Big data, culture and creativity},
+  year      = {2016},
+  pages     = {1445-1457},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+  url       = {https://www.researchgate.net/profile/Meliha-Handzic-2/publication/304150344_Knowledge_Management_Meets_Humanities_A_Case_Study_of_Diplomatic_Correspondence_Visualisation/links/576807a208aef6cdf9b3feab/Knowledge-Management-Meets-Humanities-A-Case-Study-of-Diplomatic-Correspondence-Visualisation.pdf},
+}
+
+@Article{Handzic2017,
+  author    = {Handzic, M.},
+  title     = {The {KM} Times They Are A-Changin'},
+  journal   = {Journal of Entrepreneurship, Management and Innovation},
+  year      = {2017},
+  volume    = {13},
+  number    = {3},
+  pages     = {7-27},
+  doi       = {10.7341/20171331},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
+@InProceedings{Handzic2017a,
+  author    = {Handzic, M. and Dizdar, S.},
+  title     = {Picturing the past: A case of knowledge management application in archaeology},
+  booktitle = {12th international forum on knowledge asset dynamics – knowledge management in the 21st century: Resilience, creativity and co-creation},
+  year      = {2017},
+  pages     = {1251-1261},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+  url       = {https://www.researchgate.net/publication/317548750_Picturing_the_Past_A_Case_of_Knowledge_Management_Application_in_Archaeology},
+}
+
+@Book{Handzic2019,
+  title     = {Knowledge Management, Arts, and Humanities: Interdisciplinary Approaches and the Benefits of Collaboration},
+  publisher = {Springer},
+  year      = {2019},
+  author    = {Handzic, M. and Carlucci, D.},
+  series    = {Knowledge Management and Organizational Learning},
+  doi       = {10.1007/978-3-030-10922-6},
+  journal   = {Knowledge Management and Organizational Learning},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
+@InProceedings{Handzic2019a,
+  author    = {Handzic, M. and Zulic, H. and Guja, Z. listening. In Proceedings of the 14th forum on knowledge asset dynamics – Knowledge ecosystems and growth (IFKAD 2019), 5–7 June, Matera, Italy, pp. 256–263.},
+  title     = {Knowledge discovery from arts data: A case of distant listening},
+  booktitle = {14th Forum on Knowledge Asset Dynamics},
+  year      = {2019},
+  pages     = {256-263},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+  url       = {https://www.researchgate.net/publication/333817837_Knowledge_Discovery_from_Arts_Data_a_Case_of_Distant_Listening},
+}
+
+@InProceedings{Handzic2022,
+  author    = {Handzic, M. and Mulavdic, V.},
+  title     = {Combining close and distant Reading: A plausible way forward?},
+  booktitle = {Distant reading – COST Action CA16204 Closing Conference},
+  year      = {2022},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+  url       = {https://www.distant-reading.net/events/conference-programme/},
+}
+
 @InCollection{Handzic2023,
   author    = {Handzic, M. and Mulavdic, V.},
   title     = {Broadening the Knowledge Management Horizon: A Case of Distant Reading},
@@ -24590,6 +24819,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.08.31},
 }
 
+@Book{Hofstede1984,
+  title     = {Culture's consequences: International differences in work-related values},
+  publisher = {SAGE Publications},
+  year      = {1984},
+  author    = {Hofstede, G.},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+  url       = {https://books.google.fr/books/?id=Cayp_Um4O9gC},
+}
+
 @Article{Hogan2020,
   author    = {Hogan, R. and Sherman, R. A.},
   title     = {Personality theory and the nature of human nature},
@@ -25286,6 +25525,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.tourman.2017.10.001},
   owner     = {Vincent},
   timestamp = {2021.06.23},
+}
+
+@Article{https://doi.org/10.11588/dah.2015.1.21639,
+  author    = {Bender, K.},
+  title     = {Distant Viewing in Art History. A Case Study of Artistic Productivity},
+  journal   = {International Journal for Digital Art History},
+  year      = {2015},
+  volume    = {1},
+  doi       = {10.11588/DAH.2015.1.21639},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
 }
 
 @InProceedings{Hu_2012,
@@ -29264,6 +29514,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://milkweed.org/book/braiding-sweetgrass},
 }
 
+@TechReport{Kincaid1975,
+  author      = {Kincaid, J. P. and Fishburne, R. P. and Rogers, R. L. and Chissom, B. S.},
+  title       = {Derivation of new readability formulas (automated readability index, fog count and flesch reading ease formula) for navy enlisted personnel},
+  institution = {Institute for Simulation and Training},
+  year        = {1975},
+  type        = {Technical Report},
+  number      = {8-75},
+  owner       = {Vincent},
+  timestamp   = {2023.11.30},
+  url         = {https://stars.library.ucf.edu/istlibrary/56/},
+}
+
 @Article{King2009,
   author    = {King, D. E.},
   title     = {Dlib-ml: A Machine Learning Toolkit},
@@ -31888,6 +32150,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1536414.1536474},
   owner     = {Vincent},
   timestamp = {2023.03.15},
+}
+
+@Article{Laughlin1969,
+  author    = {Mc Laughlin, G. H. and},
+  title     = {SMOG Grading-a New Readability Formula},
+  journal   = {Journal of Reading},
+  year      = {1969},
+  volume    = {12},
+  number    = {8},
+  pages     = {639-646},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+  url       = {https://www.jstor.org/stable/40011226},
 }
 
 @Article{Laughlin2010,
@@ -36812,6 +37087,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://uvadoc.uva.es/handle/10324/8031},
 }
 
+@Article{MartinezCarro2019,
+  author    = {Martínez Carro, E. and Santa María Fernández, T.},
+  title     = {Textual Electronic Library of the Spanish Theater (1868-1936) and Research with Graphs},
+  journal   = {Revista de Humanidades Digitales},
+  year      = {2019},
+  volume    = {3},
+  pages     = {23-45},
+  doi       = {10.5944/rhd.vol.3.2019.23144},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @InProceedings{Martinez-Ortiz2015,
   author    = {Martinez-Ortiz, C. and Koolen, M. and Buschenhenke, F. and van Dalen-Oskam, K.},
   title     = {Beyond the Book: Linking Books to Wikipedia},
@@ -37368,6 +37655,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.22},
 }
 
+@InCollection{McAdams2004,
+  author    = {McAdams, D. P. and Logan, R. L.},
+  title     = {What is generativity?},
+  booktitle = {The generative society: Caring for future generations.},
+  publisher = {American Psychological Association},
+  year      = {2004},
+  pages     = {15-31},
+  doi       = {10.1037/10622-002},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @Book{McAlindon1991,
   title     = {Shakespeare's Tragic Cosmos},
   publisher = {Cambridge University Press},
@@ -37550,6 +37849,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.24},
   url       = {https://www.worldcat.org/title/miltons-eve/oclc/558028798},
+}
+
+@InProceedings{McConnaughey2017,
+  author    = {McConnaughey, L. and Dai, J. and Bamman, D.},
+  title     = {The Labeled Segmentation of Printed Books},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2017},
+  pages     = {737-747},
+  doi       = {10.18653/v1/d17-1077},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
 }
 
 @Book{McCormack1985,
@@ -38529,6 +38839,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.07.08},
   url       = {http://www.psicosocial.net/historico/index.php?option=com_docman&view=download&alias=627-obedience-to-authority-an-experimental-view&category_slug=operaciones-psicologicas&Itemid=100225},
+}
+
+@TechReport{Milkova2022,
+  author      = {Milkova, M.},
+  title       = {Distant reading of scientific information: Applying topic modeling in behavioral and experimental economics field},
+  institution = {National Research University},
+  year        = {2022},
+  owner       = {Vincent},
+  timestamp   = {2023.11.30},
+  url         = {https://doi.org/10.13140/RG.2.2.13394.68804},
 }
 
 @Article{Miller1983,
@@ -42719,6 +43039,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.31},
 }
 
+@Article{O’Leary2016,
+  author    = {O'Leary, D. E.},
+  title     = {Is knowledge management dead (or dying)?},
+  journal   = {Journal of Decision Systems},
+  year      = {2016},
+  volume    = {25},
+  number    = {sup1},
+  pages     = {512–526},
+  doi       = {10.1080/12460125.2016.1193930},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @Article{Pabico2014,
   author    = {Pabico, J. P.},
   title     = {An analysis of named entity disambiguation in social networks},
@@ -44309,6 +44642,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.12.27},
 }
 
+@Article{Phillips2015,
+  author    = {Phillips, M. G. and Osmond, G. and Townsend, S.},
+  title     = {A Bird’s-Eye View of the Past: Digital History, Distant Reading and Sport History},
+  journal   = {International Journal of the History of Sport},
+  year      = {2015},
+  volume    = {32},
+  number    = {15},
+  pages     = {1725-1740},
+  doi       = {10.1080/09523367.2015.1090976},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @Article{Piantadosi2014,
   author    = {Piantadosi, S. T.},
   title     = {Zipf's word frequency law in natural language: A critical review and future directions},
@@ -44804,6 +45150,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1037/a0014420},
   owner     = {Vincent},
   timestamp = {2023.08.12},
+}
+
+@Article{Pomata2014,
+  author    = {Pomata, G.},
+  title     = {The Medical Case Narrative: Distant Reading of an Epistemic Genre},
+  journal   = {Literature and Medicine},
+  year      = {2014},
+  volume    = {32},
+  number    = {1},
+  pages     = {1–23},
+  doi       = {10.1353/lm.2014.0010},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
 }
 
 @InProceedings{Ponnambalam2016,
@@ -45378,6 +45737,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@InProceedings{Qi2020,
+  author    = {Qi, P. and Zhang, Y. and Zhang, Y. and Bolton, J. and Manning, C. D.},
+  title     = {Stanza: A Python Natural Language Processing Toolkit for Many Human Languages},
+  booktitle = {58th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2020},
+  pages     = {101-108},
+  doi       = {10.18653/v1/2020.acl-demos.14},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @InProceedings{Qin2017a,
   author    = {Qin, X. and Zhou, Y. and He, Z. and Wang, Y. and Tang, Z.},
   title     = {A Faster R-CNN Based Method for Comic Characters Face Detection},
@@ -45602,6 +45972,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner       = {Vincent},
   timestamp   = {2021.09.23},
   url         = {https://openai.com/blog/language-unsupervised/},
+}
+
+@InProceedings{Rae2020,
+  author    = {Rae, J. W. and Potapenko, A. and Jayakumar, S. M. and Hillier, C. and Lillicrap, T. P.},
+  title     = {Compressive transformers for long-range sequence modelling},
+  booktitle = {International Conference on Learning Representations},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+  url       = {https://openreview.net/forum?id=SylKikSYDH},
 }
 
 @Article{Rafael2014,
@@ -49040,7 +49420,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   journal   = {Digital Scholarship in the Humanities},
   year      = {2020},
   volume    = {36},
-  number    = {Supplement_1},
+  number    = {Supplement\_1},
   pages     = {i81-i88},
   doi       = {10.1093/llc/fqaa015},
   owner     = {Vincent},
@@ -50709,6 +51089,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1507.04808},
 }
 
+@Article{Serenko2021,
+  author    = {Serenko, A.},
+  title     = {A structured literature review of scientometric research of the knowledge management discipline: a 2021 update},
+  journal   = {Journal of Knowledge Management},
+  year      = {2021},
+  volume    = {25},
+  number    = {8},
+  pages     = {1889–1925},
+  doi       = {10.1108/jkm-09-2020-0730},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @Article{Serino2017,
   author    = {Serino, M. and D'Ambrosio, D. and Ragozini, G.},
   title     = {Bridging social network analysis and field theory through multidimensional data analysis: The case of the theatrical field},
@@ -52277,6 +52670,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.02},
   url       = {https://www.cambridge.org/core/books/two-cultures/506914BF3ADDD439EE8100FD2882D9DB},
+}
+
+@Article{Snowden2002,
+  author    = {Snowden, D.},
+  title     = {Complex acts of knowing: paradox and descriptive self‐awareness},
+  journal   = {Journal of Knowledge Management},
+  year      = {2002},
+  volume    = {6},
+  number    = {2},
+  pages     = {100–111},
+  doi       = {10.1108/13673270210424639},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
 }
 
 @Article{Snyder1970,
@@ -54790,6 +55196,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.06.01},
 }
 
+@Article{Taylor2018,
+  author    = {Taylor, J. E. and Gregory, I. N. and Donaldson, C.},
+  title     = {Combining Close and Distant Reading: A Multiscalar Analysis of the English Lake District's Historical Soundscape},
+  journal   = {International Journal of Humanities and Arts Computing},
+  year      = {2018},
+  volume    = {12},
+  number    = {2},
+  pages     = {163–182},
+  doi       = {10.3366/ijhac.2018.0220},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
+}
+
 @Article{Teague1986,
   author    = {Teague, F.},
   title     = {``Othello'' and new comedy},
@@ -55500,6 +55919,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1167/16.3.27},
   owner     = {Vincent},
   timestamp = {2020.03.15},
+}
+
+@Article{Tombs2004,
+  author    = {Tombs, K.},
+  title     = {Knowledge management is dead: long live records management},
+  journal   = {Records Management Journal},
+  year      = {2004},
+  volume    = {14},
+  number    = {2},
+  pages     = {90–93},
+  doi       = {10.1108/09565690410546145},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
 }
 
 @Book{Tompkins1961,
@@ -59472,6 +59904,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cvpr.2011.5995566},
   owner     = {Vincent},
   timestamp = {2020.08.12},
+}
+
+@InProceedings{Wolfe2000,
+  author    = {Wolfe, J. L.},
+  title     = {Effects of annotations on student readers and writers},
+  booktitle = {5th ACM conference on Digital libraries},
+  year      = {2000},
+  pages     = {19-26},
+  doi       = {10.1145/336597.336620},
+  owner     = {Vincent},
+  timestamp = {2023.11.30},
 }
 
 @InProceedings{Wolinski2012,
