Added SantaMaria2020 and MartinezCarro2019

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -7322,6 +7322,20 @@
   volume    = {3418},
 }
 
+@InProceedings{Brandes2005a,
+  author    = {Brandes, U. and Fleischer, D.},
+  title     = {Centrality Measures Based on Current Flow},
+  booktitle = {Annual Symposium on Theoretical Aspects of Computer Science},
+  year      = {2005},
+  volume    = {3404},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {533-544},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-540-31856-9_44},
+  owner     = {Vincent},
+  timestamp = {2023.12.01},
+}
+
 @Article{Brandes2008a,
   author    = {Brandes, U. and Delling, D. and Gaertler, M. and Gorke, R. and Hoefer, M. and Nikoloski, Z. and Wagner, D.},
   title     = {On modularity clustering},
@@ -16975,6 +16989,16 @@
   timestamp = {2019.06.28},
 }
 
+@Book{Evans1996,
+  title     = {Straightforward Statistics for the Behavioral Sciences},
+  publisher = {Brooks/Cole Publisher},
+  year      = {1996},
+  author    = {Evans, J. D.},
+  owner     = {Vincent},
+  timestamp = {2023.12.01},
+  url       = {https://books.google.fr/books/?id=8Ca2AAAAIAAJ},
+}
+
 @InProceedings{Evans2000,
   author    = {Evans, R. and Orasan, C.},
   title     = {Improving anaphora resolution by identifying animate entities in texts},
@@ -19779,6 +19803,17 @@
   doi       = {10.1007/978-3-030-58523-5_34},
   owner     = {Vincent},
   timestamp = {2023.03.16},
+}
+
+@InProceedings{GarciaSanchez2016,
+  author    = {García Sánchez, M. and Santa María, M. T. and Calvo Tello, J. and Fernández Merino, M. and Simón Parra, M.},
+  title     = {Proposal for reading and chromatic visualization: analysis of the structures of theatrical game in {Galdos}' {Electra}},
+  booktitle = {10th International Technology, Education and Development Conference},
+  year      = {2016},
+  pages     = {2062-2071},
+  doi       = {10.21125/inted.2016.1431},
+  owner     = {Vincent},
+  timestamp = {2023.12.01},
 }
 
 @Article{Garcia-Sanchez2021,
@@ -53604,6 +53639,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.socnet.2009.07.002},
   owner     = {Vincent},
   timestamp = {2019.03.22},
+}
+
+@Article{Stephenson1989,
+  author    = {Stephenson, K. and Zelen, M.},
+  title     = {Rethinking centrality: Methods and examples},
+  journal   = {Social Networks},
+  year      = {1989},
+  volume    = {11},
+  number    = {1},
+  pages     = {1-37},
+  doi       = {10.1016/0378-8733(89)90016-6},
+  owner     = {Vincent},
+  timestamp = {2023.12.01},
 }
 
 @InProceedings{Sterman2020,
